fix: top side is cut off when center align & long
issue: if "Center align" is enabled and the content of the card is so long that cannot be shown entirely without scrolling, the top side of the content is trimmed.

--- a/AnkiDroid/src/main/assets/flashcard.css
+++ b/AnkiDroid/src/main/assets/flashcard.css
@@ -116,7 +116,7 @@ preferred over using JavaScript.
 .vertically_centered {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   -webkit-box-align: stretch;
   -webkit-box-pack: center;
